--- a/resume.tex
+++ b/resume.tex
@@ -3,25 +3,75 @@
 \usepackage[default]{lato}
 \begin{document}
 
-\name{Cody Leroy Pero} 
+\name{Cody Pero} 
 \tagline{Software Engineer} % 
+\headerlocation{Asheville, NC}
 \personalinfo{%
     \phone{(828) 767-5122}
     \mailaddress{codypero@gmail.com}
-    \location{Asheville, NC}
     \linkedin{www.linkedin.com/in/cody-pero}
     \github{github.com/codypero}
+}
+\headercards{%
+    \headercardsplit{Experience}{Healthcare, Fintech, Enterprise, Banking, Internal Tools, Marketing, Sales, Education}{Technologies}{Java, Ruby on Rails, TypeScript, React, SQL, AWS, Docker, Git, Maven, Node.js, Jest, RSpec}
+    \hspace{1em}
+    \headercardwide{About Me}{I excel in dynamic environments where creativity and execution go hand-in-hand. My drive comes from crafting intuitive products that make a meaningful difference in people's lives. I seek teams that embrace diversity, foster growth, and put customer success at the heart of everything they build.}
 }
 \makecvheader
 \medskip
 
-\cvsection{Profile}
+\cvsection{Professional Experience}
+    \company
+        {Soomo Learning}
+        {Software Engineer}
+        {Asheville, NC (Remote)}
+        {Feb 2022 -- Mar 2025}
+        {E-Learning Platform}
     \begin{itemize}
-        \item Full stack developer with professional experience in Java, Typescript, React, and Ruby on Rails.
-        \item Passionate about learning and growth and always looking for new challenges.
-        \item Strong problem solving and analytical skills with a focus on delivering high quality software.
-        \item Excellent communication and collaboration skills, with experience working in remote teams with members around the world.
+        \item Developed and managed a set of microsites using React to communicate with a Rails core monolith. \smallskip
+        \item Created user-friendly admin tools for managing customer data securely and efficiently.\smallskip
+        \item Enhanced student engagement and accessibility through the design and implementation of features, while ensuring the integrity of student annotations and analytics.\smallskip
+        \item Evaluated and integrated SOC 2 security standards. \medskip
     \end{itemize}
+    \technologies{Ruby on Rails, Typescript, React, SQL, AWS, Cucumber, RSpec, Node.js, Jest, Docker, Git}
+    
+    \smallskip
+    \divider
+    \smallskip
+    %\clearpage
+
+    \company
+        {MIB}
+        {Software Engineer}
+        {Gainesville, FL (Remote)}
+        {Aug 2017 –- Feb 2022}
+        {Custom life insurance platforms}
+        
+        \begin{itemize}
+            \item Developed and managed websites utilizing HTML, CSS, JavaScript, React, TailwindCSS, and Java technologies.\smallskip
+            \item Maintained backend systems powered by AJAX with Apache Tomcat, Maven, and SQL integration.\smallskip
+            \item Introduced optimized production build process for projects integrating React and Maven with ViteJS hot-reloading to enhance developer efficiency.\smallskip
+            \item Worked directly with clients to evaluate requirements and implement custom solutions.\medskip
+        \end{itemize}
+        \technologies{Java, Apache Tomcat, Maven, JQuery, Javscript, React, SQL, Docker, Git, Vite}
+
+    \smallskip
+    \divider
+    \smallskip
+
+    \company
+        {SCI Fusion 360}
+        {Staff Software Developer}
+        {Charlotte, NC}
+        {May 2016 -- Aug 2017}
+        {Software Contracting}
+        
+        \begin{itemize}
+            \item Created a new payment processing application for banks by enhancing an existing Java monolith at IBM. \smallskip
+            \item Developed RESTful API endpoints for user creation, payment processing, and other functionalities.\smallskip
+            \item Oversaw successful deployment to customers.\medskip
+        \end{itemize}
+        \technologies{Java, Apache Tomcat, Maven, Windows, PowerShell, SQL, Git}
     \medskip
 
 \cvsection{Education}
@@ -34,84 +84,7 @@
         \smallskip
         \begin{itemize}
             \item GPA 3.2/4.0
-            \item Vice President of the Association of Computing Machinery for 2 years
-            \item Brother of Phi Mu Alpha, a music fraternity focused on community outreach
-            \item Resident Assistant for 2 years
         \end{itemize}
-
-\cvsection{Professional Experience}
-    \company
-        {Soomo Learning}
-        {Software Engineer}
-        {Asheville, NC}
-        {Feb 2022 -- Mar 2025}
-    \project
-        {E-Learning Platform}
-        {Ruby on Rails, Typescript, React, PostgreSQL, AWS}
-    \begin{itemize}
-        \item Developed and managed a set of microsites using React to communicate with a Rails core monolith. \smallskip
-        \item Created user-friendly admin tools for managing customer data securely and efficiently.\smallskip
-        \item Enhanced student engagement and accessibility through the design and implementation of features, while ensuring the integrity of student annotations and analytics.\smallskip
-        \item Evaluated and integrated SOC 2 security standards. \smallskip
-    \end{itemize}
-    
-    \smallskip
-    \divider
-    \smallskip
-    %\clearpage
-
-    \company
-        {MIB}
-        {Software Engineer}
-        {Gainesville, FL}
-        {Aug 2017 –- Feb 2022}
-        \project
-            {Custom life insurance platforms}
-            {Java, Maven, JQuery, Javscript, Typescript, React, SQL}
-        
-        \begin{itemize}
-            \item Developed and managed websites utilizing HTML, CSS, JavaScript, React, TailwindCSS, and Java technologies.\smallskip
-            \item Maintained backend systems powered by AJAX with Apache Tomcat, Maven, and SQL integration.\smallskip
-            \item Introduced optimized production build process for projects integrating React and Maven with ViteJS hot-reloading to enhance developer efficiency.\smallskip
-            \item Worked directly with clients to evaluate requirements and implement custom solutions.\smallskip
-        \end{itemize}
-
-    \smallskip
-    \divider
-    \smallskip
-
-    \company
-        {SCI Fusion 360}
-        {Staff Software Developer}
-        {Charlotte, NC}
-        {May 2016 -- Aug 2017}
-        \project
-        {Software Contracting}
-        {Java, Spring, SQL}
-        
-        \begin{itemize}
-            \item Created a new payment processing application for banks by enhancing an existing Java monolith at IBM. \smallskip
-            \item Developed RESTful API endpoints for user creation, payment processing, and other functionalities.\smallskip
-            \item Oversaw successful deployment to customers.\smallskip
-        \end{itemize}
-
-\medskip
-
-\cvsection{Accomplishments}
-    \bigskip
-
-    \cvachievement{\faUsers}{ {\bfseries Outstanding Interdepartmental Collaboration} \hfill { \color{accent} \faCalendar}  \hspace{0.5em}{Jul 2024}\smallskip}
-    {Maintained a large portion of the Ruby on Rails app at Soomo Learning. Received recognition after making several recommendations and changes regarding model relationships and workflows. Also successfully implemented several new tools and features to help several other departments increase productivity.}\par
-    \medskip
-    
-    \smallskip 
-    \dividergray
-    \smallskip
-    
-    \cvachievement{\faTrophy}{ {\bfseries Outstanding Performance} \hfill { \color{accent} \faCalendar}  \hspace{0.5em}{May 2017}\smallskip}
-    {Received recognition for outstanding performance during a large-scale project for a client. Was one of three engineers to design and implement a large scale p2p payment application for IBM to use with their existing payment processing monolith. Over the course of a year, we designed, implemented, and deployed our code to several banks successfully to allow their customers access to the Zelle payment platform.}\par
-    
-    \medskip
 \end{document}
 
 
