--- a/resume.tex
+++ b/resume.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt, a4paper]{cvhari}
-\geometry{left=1.2cm,right=1.2cm,marginparwidth=6.8cm,marginparsep=1.2cm,top=1.2cm,bottom=1.2cm}
+\geometry{left=1.2cm,right=1.2cm,marginparwidth=6.8cm,marginparsep=1.2cm,top=0.5cm,bottom=1.2cm}
 \usepackage[default]{lato}
 \begin{document}
 
@@ -84,6 +84,7 @@
         \smallskip
         \begin{itemize}
             \item GPA 3.2/4.0
+            \item President of Association for Computing Machinery (2014-2016)
         \end{itemize}
 \end{document}
 
