Update resume details

--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 
 \name{Cody Pero} 
 \tagline{Software Engineer} % 
-\headerlocation{Asheville, NC}
+\headerlocation{Hendersonville, NC}
 \personalinfo{%
     \phone{(828) 767-5122}
     \mailaddress{codypero@gmail.com}
@@ -41,7 +41,7 @@
     %\clearpage
 
     \company
-        {MIB}
+        {Paperless Solutions Group}
         {Software Engineer}
         {Gainesville, FL (Remote)}
         {Aug 2017 –- Feb 2022}
